[gd_scene load_steps=38 format=3 uid="uid://gnjhfm1ve68j"]

[ext_resource type="Texture2D" uid="uid://cn2dh1530cvjc" path="res://resources/graphics/enemies/bug/attack/00010.png" id="1_3k3l6"]
[ext_resource type="Script" path="res://scenes/enemies/bug.gd" id="1_atgm6"]
[ext_resource type="Texture2D" uid="uid://blkb5rngectr4" path="res://resources/graphics/enemies/bug/attack/00011.png" id="2_2anjj"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_py2in"]
[ext_resource type="Texture2D" uid="uid://32dwuysfmom7" path="res://resources/graphics/enemies/bug/attack/00012.png" id="3_8st6p"]
[ext_resource type="Texture2D" uid="uid://cif6srroc644a" path="res://resources/graphics/enemies/bug/attack/00013.png" id="4_txnqq"]
[ext_resource type="Texture2D" uid="uid://daosjyye31s2l" path="res://resources/graphics/enemies/bug/attack/00014.png" id="5_qo2qe"]
[ext_resource type="Texture2D" uid="uid://baalyhr25xkni" path="res://resources/graphics/enemies/bug/attack/00015.png" id="6_icl0o"]
[ext_resource type="Texture2D" uid="uid://du335qfn3flc1" path="res://resources/graphics/enemies/bug/attack/00016.png" id="7_58vn4"]
[ext_resource type="Texture2D" uid="uid://cydscseskbmwk" path="res://resources/graphics/enemies/bug/attack/00017.png" id="8_485jj"]
[ext_resource type="Texture2D" uid="uid://c4xjm06tog2u6" path="res://resources/graphics/enemies/bug/attack/00018.png" id="9_rmk6o"]
[ext_resource type="Texture2D" uid="uid://f6nqf36ua18b" path="res://resources/graphics/enemies/bug/attack/00019.png" id="10_25q8e"]
[ext_resource type="Texture2D" uid="uid://bt4rgduhhw0m0" path="res://resources/graphics/enemies/bug/attack/00020.png" id="11_b7o6e"]
[ext_resource type="Texture2D" uid="uid://b4or20fvp8uqo" path="res://resources/graphics/enemies/bug/attack/00021.png" id="12_wev13"]
[ext_resource type="Texture2D" uid="uid://bjpgt1q5s5ks4" path="res://resources/graphics/enemies/bug/attack/00022.png" id="13_t1w2t"]
[ext_resource type="Texture2D" uid="uid://bgdnij5m65o0d" path="res://resources/graphics/enemies/bug/attack/00023.png" id="14_3kic6"]
[ext_resource type="Texture2D" uid="uid://deaflnp18iimj" path="res://resources/graphics/enemies/bug/attack/00024.png" id="15_r4qqq"]
[ext_resource type="Texture2D" uid="uid://dvhu1tepxgvv3" path="res://resources/graphics/enemies/bug/attack/00025.png" id="16_wafnx"]
[ext_resource type="Texture2D" uid="uid://djj4ds1l3n6ux" path="res://resources/graphics/enemies/bug/attack/00026.png" id="17_xn0tt"]
[ext_resource type="Texture2D" uid="uid://tley03eql73v" path="res://resources/graphics/enemies/bug/attack/00027.png" id="18_0a2ut"]
[ext_resource type="Texture2D" uid="uid://dpln00qxso4y6" path="res://resources/graphics/enemies/bug/attack/00028.png" id="19_6ur4q"]
[ext_resource type="Texture2D" uid="uid://cm77xry52dg8a" path="res://resources/graphics/enemies/bug/attack/00029.png" id="20_t38ts"]
[ext_resource type="Texture2D" uid="uid://ctqbfrio8lpb3" path="res://resources/graphics/enemies/bug/attack/00030.png" id="21_85kh6"]
[ext_resource type="Texture2D" uid="uid://bgmf7pof02xlr" path="res://resources/graphics/enemies/bug/walk/00000.png" id="22_55rih"]
[ext_resource type="Texture2D" uid="uid://t2uas2qm2hly" path="res://resources/graphics/enemies/bug/walk/00001.png" id="23_vbmbw"]
[ext_resource type="Texture2D" uid="uid://c7ivbustwinmn" path="res://resources/graphics/enemies/bug/walk/00002.png" id="24_7f6n2"]
[ext_resource type="Texture2D" uid="uid://c1udrvsx1b5l4" path="res://resources/graphics/enemies/bug/walk/00003.png" id="25_7p1pw"]
[ext_resource type="Texture2D" uid="uid://2q8qn2tdumov" path="res://resources/graphics/enemies/bug/walk/00004.png" id="26_dm1xl"]
[ext_resource type="Texture2D" uid="uid://pc1mlc4qqo1d" path="res://resources/graphics/enemies/bug/walk/00005.png" id="27_i1kt2"]
[ext_resource type="Texture2D" uid="uid://b8tordvwy3qma" path="res://resources/graphics/enemies/bug/walk/00006.png" id="28_yfh17"]
[ext_resource type="Texture2D" uid="uid://cbr8o02arn02i" path="res://resources/graphics/enemies/bug/walk/00007.png" id="29_u46wx"]
[ext_resource type="Texture2D" uid="uid://bccyajgt2gwwk" path="res://resources/graphics/enemies/bug/walk/00008.png" id="30_vfeb5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b816x"]
shader = ExtResource("2_py2in")
shader_parameter/color = Color(1, 0.631373, 0.666667, 1)
shader_parameter/progress = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_as7u4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3k3l6")
}, {
"duration": 1.0,
"texture": ExtResource("2_2anjj")
}, {
"duration": 1.0,
"texture": ExtResource("3_8st6p")
}, {
"duration": 1.0,
"texture": ExtResource("4_txnqq")
}, {
"duration": 1.0,
"texture": ExtResource("5_qo2qe")
}, {
"duration": 1.0,
"texture": ExtResource("6_icl0o")
}, {
"duration": 1.0,
"texture": ExtResource("7_58vn4")
}, {
"duration": 1.0,
"texture": ExtResource("8_485jj")
}, {
"duration": 1.0,
"texture": ExtResource("9_rmk6o")
}, {
"duration": 1.0,
"texture": ExtResource("10_25q8e")
}, {
"duration": 1.0,
"texture": ExtResource("11_b7o6e")
}, {
"duration": 1.0,
"texture": ExtResource("12_wev13")
}, {
"duration": 1.0,
"texture": ExtResource("13_t1w2t")
}, {
"duration": 1.0,
"texture": ExtResource("14_3kic6")
}, {
"duration": 1.0,
"texture": ExtResource("15_r4qqq")
}, {
"duration": 1.0,
"texture": ExtResource("16_wafnx")
}, {
"duration": 1.0,
"texture": ExtResource("17_xn0tt")
}, {
"duration": 1.0,
"texture": ExtResource("18_0a2ut")
}, {
"duration": 1.0,
"texture": ExtResource("19_6ur4q")
}, {
"duration": 1.0,
"texture": ExtResource("20_t38ts")
}, {
"duration": 1.0,
"texture": ExtResource("21_85kh6")
}],
"loop": false,
"name": &"attack",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_55rih")
}, {
"duration": 1.0,
"texture": ExtResource("23_vbmbw")
}, {
"duration": 1.0,
"texture": ExtResource("24_7f6n2")
}, {
"duration": 1.0,
"texture": ExtResource("25_7p1pw")
}, {
"duration": 1.0,
"texture": ExtResource("26_dm1xl")
}, {
"duration": 1.0,
"texture": ExtResource("27_i1kt2")
}, {
"duration": 1.0,
"texture": ExtResource("28_yfh17")
}, {
"duration": 1.0,
"texture": ExtResource("29_u46wx")
}, {
"duration": 1.0,
"texture": ExtResource("30_vfeb5")
}],
"loop": true,
"name": &"walk",
"speed": 30.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3bymk"]
radius = 578.75
height = 1984.0

[sub_resource type="CircleShape2D" id="CircleShape2D_x65cs"]
radius = 5728.0

[sub_resource type="CircleShape2D" id="CircleShape2D_edsrs"]
radius = 1624.18

[node name="Bug" type="CharacterBody2D" groups=["Entity"]]
scale = Vector2(0.125, 0.125)
collision_layer = 2
collision_mask = 11
script = ExtResource("1_atgm6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_b816x")
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_as7u4")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10.75)
rotation = 1.5708
scale = Vector2(1, 1.00224)
shape = SubResource("CapsuleShape2D_3bymk")

[node name="NoticeArea2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea2D"]
shape = SubResource("CircleShape2D_x65cs")

[node name="AttackArea2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
shape = SubResource("CircleShape2D_edsrs")

[node name="Timers" type="Node" parent="."]

[node name="AttackTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="DamageTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="NoticeArea2D" to="." method="_on_notice_area_2d_body_entered"]
[connection signal="body_exited" from="NoticeArea2D" to="." method="_on_notice_area_2d_body_exited"]
[connection signal="body_entered" from="AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="body_exited" from="AttackArea2D" to="." method="_on_attack_area_2d_body_exited"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Timers/DamageTimer" to="." method="_on_damage_timer_timeout"]
